<resources>
    <string name="app_name">Practica_1_LinearLayout</string>
    <string name="carrito">Carrito de compra</string>
    <string name="prod1">producto 1</string>
    <string name="prod2">producto 2</string>
    <string name="prod3">producto 3</string>
    <string name="unit">unidades</string>
    <string name="importe">Importe</string>
    <string name="iva">I.V.A.</string>
    <string name="total">Total</string>
    <string name="volver">Volver</string>
    <string name="enviar">Enviar por correo electrónico</string>
    <string name="confirmar">Confirmar</string>
    <string name="vacio">$0.00</string>
</resources>
